<resources>
    <string name="app_name">LoginPage</string>
    <string name="inputPassword">비밀번호를 입력하세요.</string>
    <string name="inputID">아이디를 입력하세요.</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="name">이름</string>
    <string name="inputName">이름을 입력하세요.</string>
    <string name="register">회원가입</string>
    <string name="login">로그인</string>
</resources>